@@ -47,7 +47,6 @@ object Oct2013CfLineSpec {
     "2013-10-07 23:35:30.000",
     "2013-10-07 23:35:27.571",
     "page_ping",
-    null, // No event vendor set
     null, // We can't predict the event_id
     "734991",
     null, // No tracker namespace
@@ -96,7 +95,6 @@ object Oct2013CfLineSpec {
     null, //
     null, //
     null, // Unstructured event fields empty
-    null, //
     null, // Transaction fields empty 
     null, //
     null, //
